style(persistence): improve the code style (#71)